--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "webmozart/assert": "^1.11",
+        "ramsey/uuid": "^4.7",
+        "twig/twig": "^3.16"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -32,6 +35,15 @@
         "codeception/verify": "^3.0 || ^2.2",
         "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
     },
+    "autoload": {
+        "psr-4": {
+          "App\\": "src/",
+          "common\\": "common/",
+          "frontend\\": "frontend/",
+          "backend\\": "backend/",
+          "console\\": "console/"
+        }
+      },
     "autoload-dev": {
         "psr-4": {
             "common\\tests\\": ["common/tests/", "common/tests/_support"],
