--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,9 +69,9 @@ services:
     image: postgres:17-alpine
     environment:
       APP_ENV: dev
-      DB_USER: app
-      DB_NAME: app
-      DB_PASSWORD_FILE: /run/secrets/app_db_password
+      POSTGRES_USER: app
+      POSTGRES_DB: app
+      POSTGRES_PASSWORD_FILE: /run/secrets/app_db_password
     secrets:
       - app_db_password
     volumes:
