--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       DB_PASSWORD_FILE: /run/secrets/app_db_password
       COOKIE_DOMAIN: localhost
       FRONTEND_URL: http://localhost:20080
+      BACKEND_URL: http://backend:21080
       STATIC_URL: http://static.localhost
       MAILER_FROM_EMAIL: mail@localhost
       MAILER_FROM_NAME: application
@@ -33,7 +34,9 @@ services:
       - app_mailer_password
 
   backend:
-    build: backend
+    build:
+      context: backend/docker
+      dockerfile: development/nginx/Dockerfile
     ports:
       - 21080:80
     volumes:
@@ -42,13 +45,27 @@ services:
       # Mount source-code for development
       - ./:/app
     environment:
+      APP_ENV: dev      
+      APP_DEBUG: 0
       DB_DSN_PREFIX: pgsql
       DB_HOST: postgres    
       DB_NAME: app
       DB_USER: app
       DB_PASSWORD_FILE: /run/secrets/app_db_password
+      COOKIE_DOMAIN: localhost
+      FRONTEND_URL: http://frontend:20080
+      BACKEND_URL: http://localhost:21080
+      STATIC_URL: http://static.localhost
+      MAILER_FROM_EMAIL: mail@localhost
+      MAILER_FROM_NAME: application
+      MAILER_HOST: mailer
+      MAILER_PORT: 1025
+      MAILER_USERNAME: app
+      MAILER_PASSWORD_FILE: /run/secrets/app_mailer_password
+      MAILER_ENCRYPTION: tls
     secrets:
       - app_db_password
+      - app_mailer_password
 
   # mysql:
   #   image: mysql:5.7
