--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       APP_ENV: dev      
       APP_DEBUG: 0
+      FRONTEND_NAME: App Frontend
       DB_DSN_PREFIX: pgsql
       DB_HOST: postgres    
       DB_NAME: app
@@ -47,6 +48,7 @@ services:
     environment:
       APP_ENV: dev      
       APP_DEBUG: 0
+      BACKEND_NAME: App Backend
       DB_DSN_PREFIX: pgsql
       DB_HOST: postgres    
       DB_NAME: app
